--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
        <li> KArl MArx</li>
  
   </ul>
-     <h3>Fight against Nazis by DDOsing <a target="_blank"href="https://arkhamknight9103.github.io">this website</a></h3>
+     <h3>Fight against Socialist Nazis by DDOsing <a target="_blank"href="https://arkhamknight9103.github.io">this website</a> Take back our party!</h3>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <img src="https://vignette1.wikia.nocookie.net/villains/images/5/51/Nazi.jpg/revision/latest/scale-to-width-down/1000?cb=20140312004033" alt="The Nazi Swastika">
+     <h1> Sieg Heil !!!!</h1>
     </body>
 </html>
